[metadata]
name = blat
version = 0.2.0
author = William Christian
description = opinionated release notes generation

[options]
packages =
    blat
install_requires =
    markdown2
    beautifulsoup4
    typer
    pyppeteer

[options.entry_points]
console_scripts =
    blat = blat.cli:app

[bdist_wheel]
universal = true

[options.package_data]
* = **/*.html, **/*.md, **/*.css
