[metadata]
name = daub
version = 0.2.0
author = William Christian
description = opinionated release notes generation

[options]
packages =
    daub
install_requires =
    markdown2
    beautifulsoup4
    typer
    pyppeteer

[options.entry_points]
console_scripts =
    daub = daub.cli:app

[bdist_wheel]
universal = true

[options.package_data]
* = **/*.html, **/*.md, **/*.css
