[metadata]
name = daub
version = attr: daub.__version__
author = William Christian
description = opinionated release notes generation
long_description = file: README.md
long_description_content_type="text/markdown"
url = https://github.com/verillious/daub
keywords = markdown, cli, pdf, pdf-generation
license = CC0 1.0 universal
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages =
    daub

[options.entry_points]
console_scripts =
    daub = daub.cli:app

[bdist_wheel]
universal = true

[options.package_data]
* = **/*.html, **/*.md, **/*.css
